--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: HSR Tech
 email: your-email@example.com
 description: "manual fastquest"
-baseurl: "/hsr-tech"
-url: "" 
+baseurl: ""
+url: "hsrtechonline.github.io" 
 manualColeta: "Manual Coleta" 
 manualAdmin: "Manual Admin" 
 github_username:  HSRTech
