--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: HSR Tech
 email: your-email@example.com
 description: "manual fastquest"
 baseurl: ""
-url: "https://username.github.io" 
+url: "https://hsrtechonline.github.io" 
 manualColeta: "Manual Coleta" 
 manualAdmin: "Manual Admin" 
 github_username:  HSRTech
